<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <!-- Section for displaying team names and scores -->
    <TableLayout
        android:id="@+id/section_teamDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/section_heading">
            <TextView
                android:id="@+id/txt_teamName"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_teamName"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/purple_700"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txt_teamScore"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/txt_teamScore"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/purple_500"
                android:padding="5dp" />
        </TableRow>
        <TableRow
            android:id="@+id/section_teamOne"
            android:background="@color/black_10">
            <TextView
                android:id="@+id/txt_teamIndia"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_teamIndia"
                android:textSize="25sp"
                android:textColor="@color/green"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txt_teamIndiaScore"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/txt_score"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:padding="5dp" />
        </TableRow>
        <TableRow
            android:id="@+id/section_teamTwo"
            android:background="@color/black_20">
            <TextView
                android:id="@+id/txt_teamAustralia"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/txt_teamAustralia"
                android:textSize="25sp"
                android:textColor="@color/green"
                android:layout_gravity="center_vertical"
                android:padding="5dp" />
            <TextView
                android:id="@+id/txt_teamAustraliaScore"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/txt_score"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:padding="5dp"/>
        </TableRow>
    </TableLayout>
    <!-- Section for updating scores for teams -->
    <LinearLayout
        android:id="@+id/section_scoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_scoreUpdate" />
        <!-- Section for selecting team for score updation -->
        <RelativeLayout
            android:id="@+id/section_teamSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_changeTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_teamIndia" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/switch_changeTeam"
                android:text="@string/txt_teamAustralia"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/txt_scoreMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_scoreMethod"
            android:layout_marginTop="10dp"/>
        <!-- Section for updating score with pre defined values -->
        <RelativeLayout
            android:id="@+id/section_scoringOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdo_spnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
            <Spinner
                android:id="@+id/spnr_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/rdo_spnr" />
        </RelativeLayout>
        <!-- Section for entering score manually -->
        <RelativeLayout
            android:id="@+id/section_scoringTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdo_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edt_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/edt_scoreHint"
                android:inputType="number"
                android:layout_toEndOf="@+id/rdo_edt"
                tools:ignore="Autofill" />
        </RelativeLayout>
        <!-- Section for button to increase and decrease scores -->
        <RelativeLayout
            android:id="@+id/section_btnScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btn_scoreDecrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scoreDecrease" />
            <Button
                android:id="@+id/btn_scoreIncrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scoreIncrease"
                android:layout_toEndOf="@id/btn_scoreDecrease"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>